--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" type="text/css" href="ftcss.css">
-
 <!-- estrutura -->
 <div class="ftalbum ftinvisible" id="ftalbum">
 	<div class="btleft"><button id="ftbtprev" onclick='ftprev()'><</button></div>
@@ -8,15 +6,32 @@
 	<img id='ftativa' src=''>
 </div>
 
+<pre>
+As imagens devem ter o mesmo nome, porém em pastas diferentes.
+Uma contendo as miniaturas e a outra contendo as originais.
 
-<img pasta='big' src="thumb/1.jpg">
-<img pasta='big' src="thumb/2.jpg">
+
+</pre>
+
+<pre>&lt;img src='thumb/1.jpg'></pre>
+
+
+<img src="thumb/1.jpg">
+<img src="thumb/2.jpg">
+<img src="thumb/3.jpg">
+
+<pre>&lt;img pasta='big' src='thumb/1.jpg'></pre>
+
+
 <img pasta='big' src="thumb/3.jpg">
 <img pasta='big' src="thumb/4.jpg">
 <img pasta='big' src="thumb/5.jpg">
 <img pasta='big' src="thumb/6.jpg">
 <img pasta='big' src="thumb/7.jpg">
 <img pasta='big' src="thumb/8.jpg">
+<img pasta='big' src="thumb/1.jpg">
+<img pasta='big' src="thumb/2.jpg">
 <img pasta='big' src="thumb/9.jpg">
 
+<link rel="stylesheet" type="text/css" href="ftcss.css">
 <script src="ftjs.js"></script>
