--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 </style>
 
+<meta name="viewport" content="width=device-width, user-scalable=no">
 
 <div class="album" pasta="imgs">
 	<div><img src='thumb/1.jpg'></div>
